--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,61 @@
   float: left;
   min-height: 1px;
   padding: 10px; }
+
+/* line 58, scss/main.css */
+header .logo {
+  font-size: 30px;
+  font-weight: 800;
+  color: #ff971f;
+  margin-top: 25px;
+  margin-bottom: 10px; }
+
+/* line 65, scss/main.css */
+header .navigation {
+  margin-top: 15px;
+  text-align: center;
+  list-style: none;
+  padding-top: 10px;
+  border-top: 2px solid rgba(123, 123, 123, 0.1); }
+
+/* line 71, scss/main.css */
+header .navigation li {
+  font-size: 25px;
+  padding: 0 10px;
+  color: black;
+  text-decoration: none;
+  display: inline; }
+
+/* line 77, scss/main.css */
+header .navigation li a {
+  text-decoration: none;
+  color: black;
+  font-size: 25px;
+  font-weight: 400; }
+
+/* line 82, scss/main.css */
+header .navigation li a:hover {
+  color: #ff971f;
+  transition: 1s; }
+
+/* line 86, scss/main.css */
+section .photo {
+  background-image: url(../photos/background_photo.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  height: 80vh;
+  top: 150px;
+  position: absolute;
+  width: 95vw;
+  left: 42px; }
+
+/* line 97, scss/main.css */
+.formBackground {
+  width: 350px;
+  height: 550px;
+  background: rgba(255, 255, 255, 0.4);
+  position: relative;
+  top: 100px;
+  border: 3px solid rgba(255, 255, 255, 0.8);
+  border-radius: 5px; }
