--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -13,6 +13,7 @@ header {
         padding-top: 10px;
         border-top: 2px solid rgba(123, 123, 123, 0.1);
         li {
+            cursor: pointer;
             font-size: 25px;
             padding: 0 10px;
             color: black;
@@ -25,6 +26,10 @@ header {
                 font-weight: 400;
             }
             a:hover {
+                color: #ff971f;
+                transition: 1s;
+            }
+            a:focus {
                 color: #ff971f;
                 transition: 1s;
             }
@@ -54,4 +59,9 @@ section {
     top: 100px;
     border: 3px solid rgba(255, 255, 255, 0.8);
     border-radius: 5px;
+    transition: 2s;
+}
+
+.visible {
+    display: inline-block;
 }
