--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -2,7 +2,7 @@ header {
     .logo {
         font-size: 30px;
         font-weight: 800;
-        color: #ff971f;
+        color: $bgLogoColor;
         margin-top: 25px;
         margin-bottom: 10px;
     }
@@ -26,11 +26,11 @@ header {
                 font-weight: 400;
             }
             a:hover {
-                color: #ff971f;
+                color: $bgLogoColor;
                 transition: 1s;
             }
             a:focus {
-                color: #ff971f;
+                color: $bgLogoColor;
                 transition: 1s;
             }
         }
@@ -54,14 +54,29 @@ section {
 .formBackground {
     width: 350px;
     height: 550px;
-    background: rgba(255, 255, 255, 0.4);
+    background: rgba(255, 255, 255, 0.7);
     position: relative;
     top: 100px;
-    border: 3px solid rgba(255, 255, 255, 0.8);
-    border-radius: 5px;
-    transition: 2s;
+    /* border: 3px solid rgba(255, 255, 255, 0.8); */
+    border-radius: 2px;
 }
 
-.visible {
-    display: inline-block;
+.bmi {
+    p {
+        font-size: 25px;
+        margin: 25px 0;
+        text-align: center;
+        font-weight: 500;
+    }
+    label {
+        font-size: 25px;
+    }
+    .bmiBtn {
+        width: 125px;
+        height: 50px;
+        background: $bgLogoColor;
+        text-align: center;
+        margin: 20px 0;
+        position: relative;
+    }
 }
