--- a/css/main.css
+++ b/css/main.css
@@ -72,81 +72,135 @@
   padding: 10px; }
 
 /* line 58, scss/main.css */
+header .hamburger {
+  display: inline-block;
+  float: right;
+  position: absolute;
+  top: 20px;
+  right: 30px; }
+
+@media (min-width: 900px) {
+  /* line 65, scss/main.css */
+  header .hamburger {
+    display: none; } }
+
+/* line 68, scss/main.css */
 header .logo {
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 800;
   color: #ff971f;
-  margin-top: 25px;
-  margin-bottom: 10px; }
+  margin: 25px 0 10px 15px; }
 
-/* line 65, scss/main.css */
+@media (min-width: 900px) {
+  /* line 74, scss/main.css */
+  header .logo {
+    font-size: 30px;
+    margin-top: 25px;
+    margin-bottom: 10px; } }
+
+/* line 79, scss/main.css */
 header .navigation {
   margin-top: 15px;
   text-align: center;
   list-style: none;
-  padding-top: 10px;
-  border-top: 2px solid rgba(123, 123, 123, 0.1); }
+  border-top: 3px solid rgba(123, 123, 123, 0.1); }
 
-/* line 71, scss/main.css */
+@media (min-width: 900px) {
+  /* line 85, scss/main.css */
+  header .navigation {
+    padding-top: 10px; } }
+
+/* line 87, scss/main.css */
 header .navigation li {
   cursor: pointer;
   font-size: 25px;
-  padding: 0 10px;
+  padding: 10px 0 10px 0;
   color: black;
   text-decoration: none;
-  display: inline; }
+  display: block;
+  border-bottom: 2px solid rgba(123, 123, 123, 0.1); }
 
-/* line 78, scss/main.css */
+@media (min-width: 900px) {
+  /* line 96, scss/main.css */
+  header .navigation li {
+    border-bottom: none;
+    padding: 0 10px;
+    display: inline; } }
+
+/* line 100, scss/main.css */
 header .navigation li a {
   text-decoration: none;
   color: black;
   font-size: 25px;
   font-weight: 400; }
 
-/* line 83, scss/main.css */
+/* line 105, scss/main.css */
 header .navigation li a:hover {
   color: #ff971f;
   transition: 1s; }
 
-/* line 86, scss/main.css */
+/* line 108, scss/main.css */
 header .navigation li a:focus {
   color: #ff971f;
   transition: 1s; }
 
-/* line 90, scss/main.css */
+/* line 112, scss/main.css */
 section .photo {
   background-image: url(../photos/background_photo.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
-  height: 80vh;
-  top: 150px;
+  height: 100vh;
   position: absolute;
-  width: 95vw;
-  left: 42px; }
+  width: 100vw; }
 
-/* line 101, scss/main.css */
+@media (min-width: 450px) {
+  /* line 121, scss/main.css */
+  section .photo {
+    height: 80vh; } }
+
+@media (min-width: 900px) {
+  /* line 124, scss/main.css */
+  section .photo {
+    margin-top: 0;
+    left: 42px;
+    top: 150px;
+    width: 95vw; } }
+
+/* line 130, scss/main.css */
 .formBackground {
-  width: 350px;
+  width: 95vw;
   height: 550px;
   background: rgba(255, 255, 255, 0.7);
   position: relative;
-  top: 100px;
-  /* border: 3px solid rgba(255, 255, 255, 0.8); */
-  border-radius: 2px; }
+  top: 30px;
+  border-radius: 2px;
+  display: block;
+  margin: auto; }
 
-/* line 110, scss/main.css */
+@media (min-width: 900px) {
+  /* line 140, scss/main.css */
+  .formBackground {
+    width: 350px; } }
+
+@media (min-width: 900px) {
+  /* line 143, scss/main.css */
+  .formBackground {
+    position: absolute;
+    top: 100px; } }
+
+/* line 147, scss/main.css */
 .bmi p {
   font-size: 25px;
   margin: 25px 0;
   text-align: center;
   font-weight: 500; }
 
-/* line 116, scss/main.css */
+/* line 153, scss/main.css */
 .bmi label {
   font-size: 25px; }
 
-/* line 119, scss/main.css */
+/* line 156, scss/main.css */
 .bmi .bmiBtn {
   width: 125px;
   height: 50px;
@@ -154,3 +208,27 @@ section .photo {
   text-align: center;
   margin: 20px 0;
   position: relative; }
+
+/* line 164, scss/main.css */
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s; }
+
+/* line 173, scss/main.css */
+.change .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px); }
+
+/* line 177, scss/main.css */
+.change .bar2 {
+  opacity: 0; }
+
+/* line 180, scss/main.css */
+.change .bar3 {
+  -webkit-transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px); }
