--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -1,24 +1,46 @@
 header {
+    .hamburger {
+        display: inline-block;
+        float: right;
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        @media (min-width: 900px) {
+            display: none;
+        }
+    }
     .logo {
-        font-size: 30px;
+        font-size: 25px;
         font-weight: 800;
         color: $bgLogoColor;
-        margin-top: 25px;
-        margin-bottom: 10px;
+        margin: 25px 0 10px 15px;
+        @media (min-width: 900px) {
+            font-size: 30px;
+            margin-top: 25px;
+            margin-bottom: 10px;
+        }
     }
     .navigation {
         margin-top: 15px;
         text-align: center;
         list-style: none;
-        padding-top: 10px;
-        border-top: 2px solid rgba(123, 123, 123, 0.1);
+        border-top: 3px solid rgba(123, 123, 123, 0.1);
+        @media (min-width: 900px) {
+            padding-top: 10px;
+        }
         li {
             cursor: pointer;
             font-size: 25px;
-            padding: 0 10px;
+            padding: 10px 0 10px 0;
             color: black;
             text-decoration: none;
-            display: inline;
+            display: block;
+            border-bottom: 2px solid rgba(123, 123, 123, 0.1);
+            @media (min-width: 900px) {
+                border-bottom: none;
+                padding: 0 10px;
+                display: inline;
+            }
             a {
                 text-decoration: none;
                 color: black;
@@ -43,22 +65,37 @@ section {
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center top;
-        height: 80vh;
-        top: 150px;
+        height: 100vh;
         position: absolute;
-        width: 95vw;
-        left: 42px;
+        width: 100vw;
+        @media (min-width: 450px) {
+            height: 80vh;
+        }
+        @media (min-width: 900px) {
+            margin-top: 0;
+            left: 42px;
+            top: 150px;
+            width: 95vw;
+        }
     }
 }
 
 .formBackground {
-    width: 350px;
+    width: 95vw;
     height: 550px;
     background: rgba(255, 255, 255, 0.7);
     position: relative;
-    top: 100px;
-    /* border: 3px solid rgba(255, 255, 255, 0.8); */
+    top: 30px;
     border-radius: 2px;
+    display: block;
+    margin: auto;
+    @media (min-width: 900px) {
+        width: 350px;
+    }
+    @media (min-width: 900px) {
+        position: absolute;
+        top: 100px;
+    }
 }
 
 .bmi {
@@ -79,4 +116,28 @@ section {
         margin: 20px 0;
         position: relative;
     }
+}
+
+.bar1,
+.bar2,
+.bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+.change .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+    transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {
+    opacity: 0;
+}
+
+.change .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -8px);
+    transform: rotate(45deg) translate(-8px, -8px);
 }
