--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -24,9 +24,11 @@ header {
         margin-top: 15px;
         text-align: center;
         list-style: none;
+        display: none;
         border-top: 3px solid rgba(123, 123, 123, 0.1);
         @media (min-width: 900px) {
             padding-top: 10px;
+            display: block;
         }
         li {
             cursor: pointer;
@@ -140,4 +142,7 @@ section {
 .change .bar3 {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
+}
+.visible {
+    display: none;
 }
