--- a/scss/partials/_section1.scss
+++ b/scss/partials/_section1.scss
@@ -15,9 +15,11 @@ header {
         color: $bgLogoColor;
         margin: 25px 0 10px 15px;
         @media (min-width: 900px) {
+            margin: 25px 0 10px 50px;
             font-size: 30px;
-            margin-top: 25px;
-            margin-bottom: 10px;
+        }
+        @media (min-width: 1200px) {
+            margin: 25px 0 10px 15px;
         }
     }
     .navigation {
@@ -46,8 +48,11 @@ header {
             a {
                 text-decoration: none;
                 color: black;
-                font-size: 25px;
+                font-size: 20px;
                 font-weight: 400;
+                @media (min-width: 1200px) {
+                    font-size: 25px;
+                }
             }
             a:hover {
                 color: $bgLogoColor;
@@ -84,39 +89,104 @@ section {
 
 .formBackground {
     width: 95vw;
-    height: 550px;
-    background: rgba(255, 255, 255, 0.7);
+    height: 80vh;
+    background: rgba(255, 255, 255, 0.8);
     position: relative;
     top: 30px;
     border-radius: 2px;
     display: block;
     margin: auto;
-    @media (min-width: 900px) {
+    @media (min-width: 450px) {
         width: 350px;
+        height: 550px;
     }
     @media (min-width: 900px) {
-        position: absolute;
-        top: 100px;
+        right: 250px;
+        position: relative;
+        top: 50px;
+        height: 550px;
+    }
+    @media (min-width: 1200px) {
+        right: 400px;
     }
 }
 
 .bmi {
     p {
+        padding-top: 25px;
         font-size: 25px;
         margin: 25px 0;
         text-align: center;
         font-weight: 500;
+        span {
+            font-size: 27px;
+            font-weight: 600;
+        }
     }
-    label {
-        font-size: 25px;
+    .bmiForm {
+        label {
+            font-size: 20px;
+            margin: 0px 30px 0 10px;
+            top: 2px;
+            position: relative;
+        }
+        .gender {
+            width: 30px;
+            height: 30px;
+            margin: 20px 0 20px 15px;
+        }
+        input[type='text'] {
+            height: 35px;
+            width: 150px;
+        }
+        .firstInputBmi {
+            margin: 20px 0 20px -10px;
+        }
+        .secondInputBmi {
+            margin: 20px 0 20px 0px;
+        }
+        input[type='radio'] {
+            width: 30px;
+            height: 30px;
+            margin: 20px 0 20px 15px;
+            position: relative;
+            top: 9px;
+        }
     }
     .bmiBtn {
-        width: 125px;
+        cursor: pointer;
+        margin-left: 2%;
+        width: 90vw;
         height: 50px;
         background: $bgLogoColor;
         text-align: center;
-        margin: 20px 0;
         position: relative;
+        @media (min-width: 450px) {
+            margin-left: 11%;
+            width: 265px;
+            height: 50px;
+            background: #ff971f;
+            text-align: center;
+            position: relative;
+        }
+        p {
+            text-shadow: 1px 1px 3px #854900;
+            font-size: 17px;
+            color: white;
+            font-weight: 600;
+            padding-top: calc(50% - 148px);
+            margin: 50px auto;
+            letter-spacing: 1px;
+            @media (min-width: 450px) {
+                padding-top: calc(50% - 118px);
+                margin: 15px auto;
+            }
+        }
+    }
+    .bmiBtn:hover {
+        background: #ffaf5e;
+        background-image: linear-gradient(to bottom, #ffaf5e, #ff8400);
+        text-decoration: none;
     }
 }
 
@@ -143,6 +213,7 @@ section {
     -webkit-transform: rotate(45deg) translate(-8px, -8px);
     transform: rotate(45deg) translate(-8px, -8px);
 }
+
 .visible {
     display: none;
 }
