BMI form calculator - background send form v2.

--- a/css/main.css
+++ b/css/main.css
@@ -339,10 +339,22 @@ section .photo {
   width: 100vw;
   height: 100vh;
   z-index: 500;
-  opacity: 0.9;
+  opacity: 1;
   position: absolute;
   top: 0;
   background-image: url(../photos/background_photo_blur.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center top; }
+
+/* line 274, scss/main.css */
+.bgClick .finalFormBg {
+  right: 0;
+  top: 150px;
+  width: 600px;
+  height: 500px;
+  background: white; }
+
+/* line 280, scss/main.css */
+.bgClick .closeFormBtn {
+  margin-left: auto; }
